tests/machine/x/python/cross_join.error
run: exit status 1
--- Cross Join: All order-customer pairs ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/cross_join.py", line 38, in <module>
    entry["orderId"],
    ~~~~~^^^^^^^^^^^
TypeError: 'Auto1' object is not subscriptable

