tests/machine/x/python/cross_join.py
# Generated by Mochi Python compiler
from __future__ import annotations
import dataclasses


@dataclasses.dataclass
class Auto1:
    orderId: int
    orderCustomerId: int
    pairedCustomerName: typing.Any
    orderTotal: int


customers = [
    {"id": 1, "name": "Alice"},
    {"id": 2, "name": "Bob"},
    {"id": 3, "name": "Charlie"},
]
orders = [
    {"id": 100, "customerId": 1, "total": 250},
    {"id": 101, "customerId": 2, "total": 125},
    {"id": 102, "customerId": 1, "total": 300},
]
result = [
    Auto1(
        orderId=o["id"],
        orderCustomerId=o["customerId"],
        pairedCustomerName=c["name"],
        orderTotal=o["total"],
    )
    for o in orders
    for c in customers
]
print("--- Cross Join: All order-customer pairs ---")
for entry in result:
    print(
        "Order",
        entry["orderId"],
        "(customerId:",
        entry["orderCustomerId"],
        ", total: $",
        entry["orderTotal"],
        ") paired with",
        entry["pairedCustomerName"],
    )
